fix: corrected height for components on small screens

--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -10,4 +10,5 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
+  margin-bottom: 40px;
 }
