--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -2,8 +2,6 @@
   width: 100%;
   max-width: 600px;
   box-sizing: border-box;
-  height: 100vh;
-  max-height: 912px;
 }
 
 .orderSection {
