--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,7 +1,7 @@
 .BurgerIngredients {
   width: 100%;
   max-width: 600px;
-  height: 100vh;
+  height: calc(100vh - 40px);
   max-height: 912px;
   overflow-y: hidden;
 }
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 128px);
   max-height: 716px;
   overflow-y: auto;
   scrollbar-color: #8585AD #2F2F37 ;
